--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,8 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     transition: background-color var(--transition-normal), color var(--transition-normal);
+    overflow-x: hidden;
+    width: 100%;
 }
 
 h1,
